# sqlalchemy-to-pydantic

./: .gitignore  LICENSE  README.md  pyproject.toml
sqlalchemy_to_pydantic/: __init__.py  converter.py
tests/: test_pydantic_sqlalchemy.py
